[gd_scene load_steps=5 format=3 uid="uid://cwcibktmxomhv"]

[ext_resource type="Script" path="res://enemy/spawners/spawner_base.gd" id="1_o1p22"]
[ext_resource type="Texture2D" uid="uid://cg6uag6e4rfhd" path="res://assets/Textures/Maps/19.07a - Gentle Forest 3.0a ($0 palettes)/gentle sheets/gentle forest v01.png" id="2_k8ffm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vtahf"]
radius = 280.959

[sub_resource type="Curve2D" id="Curve2D_y16gu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -11, -4, 0, 0, 0, 0, -1, -10, 0, 0, 0, 0, 12, -4, 0, 0, 0, 0, -1, 2, 0, 0, 0, 0, -11, -4)
}
point_count = 5

[node name="Spawner" type="StaticBody2D"]
script = ExtResource("1_o1p22")

[node name="hole" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -3)
texture = ExtResource("2_k8ffm")
hframes = 8
vframes = 16
frame = 20

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="active_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="active_area"]
visible = false
shape = SubResource("CircleShape2D_vtahf")
debug_color = Color(0.976471, 0, 0.0431373, 0.419608)

[node name="spawn_area" type="Path2D" parent="."]
curve = SubResource("Curve2D_y16gu")

[node name="PathFollow2D" type="PathFollow2D" parent="spawn_area"]
position = Vector2(-11, -4)
rotation = -0.54042

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="active_area" to="." method="_on_active_area_body_entered"]
[connection signal="body_exited" from="active_area" to="." method="_on_active_area_body_exited"]
